# FastSync

./: .gitignore
.github/workflows/: build-and-release.yml
mobile-sender/: settings.gradle.kts
mobile-sender/app/: build.gradle.kts
mobile-sender/app/release/: output-metadata.json
mobile-sender/app/src/main/: AndroidManifest.xml
mobile-sender/app/src/main/java/com/duoduojuzi/: ClipboardHandler.kt  FastSyncService.kt  MainActivity.kt  PhotoHandler.kt  PhotoSyncService.kt  SmsHandler.kt
mobile-sender/app/src/main/res/layout/: activity_main.xml
mobile-sender/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
mobile-sender/app/src/main/res/values/: strings.xml  themes.xml
mobile-sender/app/src/main/res/xml/: accessibility_service_config.xml
pc-receiver/: Cargo.toml
pc-receiver/src/: main.rs  tray.rs
pc-receiver/src/handlers/: clipboard.rs  mod.rs  photo.rs  sms.rs
