[package]
name = "pc-receiver"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
arboard = "3.4.0"
bytes = "1.6.0"
anyhow = "1.0.86"
base64 = "0.22.1"
futures = "0.3"
image = "0.25.1"
hex = "0.4.3"
mdns-sd = "0.11.0"
hostname = "0.4.0"
chrono = "0.4.38"
rfd = "0.14.1"
zune-jpeg = "0.4"
tray-icon = "0.14"
tao = "0.25"
local-ip-address = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.windows]
version = "0.58.0"
features = [
    "Data_Xml_Dom",
    "UI_Notifications",
    "Foundation",
]

[profile.dev.package."*"]
opt-level = 3
